<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tx_next"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_number"
                    android:textColor="@color/housing_manager_tx_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/tx_contract_number"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="@string/housing_manager_contract_ed_number"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_buyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_buyer"
                    android:textColor="@color/housing_manager_tx_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/tx_contract_buyer"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="@string/housing_manager_contract_userName"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_country"
                    android:textColor="@color/housing_manager_tx_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/tx_contract_country"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="请输入您的国籍"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_id_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_id_type"
                    android:textColor="@color/housing_manager_tx_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/tx_contract_id_type"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="请输入您的证件类型"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_id_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_id_number"
                    android:textColor="@color/housing_manager_tx_gray" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@+id/tx_contract_id_number"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="请输入您的证件号码"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:id="@+id/tx_contract_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_owner_type"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="业主"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_address"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:id="@+id/tx_contract_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="重庆市渝北区金童大道西段"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_zip_code"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:id="@+id/tx_contract_zip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="4005800"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_contact_number"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:id="@+id/tx_contract_contact_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint="17365520612"
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/housing_manager_gray_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_common_way"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:id="@+id/tx_contact_common_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint=""
                    android:maxLines="1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/housing_manager_gray_line" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/housing_manager_contract_agreement_ratio"
                    android:textColor="@color/housing_manager_tx_gray" />

                <TextView
                    android:id="@+id/tx_contact_agreement_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@color/white"
                    android:gravity="center|right"
                    android:hint=""
                    android:maxLines="1"
                    android:textSize="14sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/housing_manager_gray_line" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_contract_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tx_add_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_verification_btn"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:text="+ 添加乙方"
                    android:textColor="@color/housing_manager_them" />

                <TextView
                    android:id="@+id/tx_add_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_toRightOf="@+id/tx_add_party"
                    android:background="@drawable/shape_verification_btn_review"
                    android:paddingBottom="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="8dp"
                    android:text="+ 添加代理人"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tx_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/housing_manager_them"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="下一步"
        android:textColor="@color/white"
        android:textSize="16sp" />
</RelativeLayout>